# Cadence-Models

lift2009/: project.dasm  run.dasm
scubaDangerfield2010/: README  diver.dasm  model.dasm  ui.dasm
scubaDangerfield2010/ffi/: Makefile.in  README  config.status  configure  configure.ac  dll.h  ffi.cpp  ffi.dasm
stargate/: config.dasm  gate.dasm  stargate.dasm  viz.dasm  window.dasm
stargate/data/: Stargate.tga  Stargate.x  blur.fp  chevron.frag  chevron.vert  chevron_diffuse.tga  chevron_normal.tga  dof.fp  extractBloom.fp  normal.frag  normal.vert  puddle.frag  puddle.vert  rim_diffuse.tga  rim_normal.tga  ring.vert  sky_bk.tga  sky_dn.tga  sky_fr.tga  sky_lt.tga  sky_rt.tga  sky_up.tga  skybox.x  stargate.3ds  stargate4_final.3ds  stargate4_final.x  stargate_diffuse.tga  stargate_normal.tga  stargateglow.frag  stargateglow.vert  symbol_diffuse.tga  symbol_normal.tga  tone.fp
trafficlightsysMcHugh2010/: 1_lightseq2010.e  2_displaycompts.dasm  3_lightinstances.dasm  4_linkedendasm.e  5_carspec.dasm  README2010.txt
trafficlightsysMcHugh2010/wgd/: wgd.dasm
wiifly2008/: ground.tga  ship.x  skybox.x  splat0_alpha.tga  wiifly.dasm  wiifly_game.dasm
